# colt

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yaml  main.yml  pypi-publish.yaml
colt/: __init__.py  builder.py  callback.py  context.py  default_registry.py  lazy.py  placeholder.py  registrable.py  type_store.py  utils.py
docker/: Dockerfile.dev
examples/: sklearn_model.py
examples/titanic/: Makefile  Pipfile  README.md
examples/titanic/configs/: grid_search.jsonnet  lgbm.jsonnet  pdpipeline.jsonnet
examples/titanic/scripts/: run.py
examples/titanic/titanic/: logger.py  loggger.py  validator.py  worker.py
examples/titanic/titanic/pdp/: features.py  stages.py  transformers.py
examples/titanic/titanic/utils/: camsnake.py  jsonnet.py
pob/: __init__.py  build.py  builder.py  error.py
src/colt/: __init__.py  _compat.py  _constants.py  builder.py  callback.py  error.py  jsonschema.py  lazy.py  placeholder.py  registrable.py  types.py  utils.py
tests/: test_callback.py  test_colt.py  test_conflict.py  test_conscructor.py  test_context.py  test_default_registry.py  test_dry_run.py  test_generics.py  test_import.py  test_jsonschema.py  test_lazy.py  test_placeholder.py  test_pob.py  test_registrable.py  test_strict_mode.py  test_utils.py  test_version.py
