[tool.poetry]
name = "colt"
version = "0.16.6"
description = "A configuration utility for Python object."
authors = ["altescy <me@altescy.jp>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/altescy/colt"
keywords=["config", "python", "object"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
packages = [
    { include = "colt" }
]

[tool.poetry.urls]
"Issues" = "https://github.com/altescy/colt/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pysen = "^0.11.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^5.0.4"
mypy = "^1.10.0"

[tool.poetry.group.lsp]
optional = true

[tool.poetry.group.lsp.dependencies]
python-lsp-server = { version="^1.0.0", extras=["flake8"] }
pylsp-mypy = "^0.6.9"
python-lsp-isort = "^0.2.0"
python-lsp-black = "^2.0.0"

[tool.pysen]
version = "0.11"

[tool.pysen-cli]
settings_dir = "."

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["colt/", "tests/"]

[tool.pysen.lint.source]
  includes = ["."]
  excludes = [".venv/", "examples/"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
markers = ["java"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


[tool.black] # automatically generated by pysen
# pysen ignores and overwrites any modifications
line-length = 88
target-version = ["py38"]

[tool.isort] # automatically generated by pysen
# pysen ignores and overwrites any modifications
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
