[project]
name = "colt"
version = "0.16.6"
description = "A configuration utility for Python object."
authors = [
    {name = "altescy", email = "me@altescy.jp"},
]
license = "mit"
readme = "README.md"
keywords=["config", "python", "object"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8,<4.0"
dependencies = []

[project.urls]
HomePage = "https://github.com/altescy/colt"
Issues = "https://github.com/altescy/colt/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'colt/__init__.py'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    '/colt',
    'README.md',
    'LICENSE',
]

[tool.ruff]
line-length = 120
exclude = [
    'examples',
]

[tool.pyright]
exclude = [
    '.venv',
    'examples',
]
