[project]
name = "colt"
version = "0.17.0"
description = "A configuration utility for Python object."
authors = [
    {name = "altescy", email = "me@altescy.jp"},
]
license = "MIT"
readme = "README.md"
keywords=["config", "python", "object"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8,<4.0"
dependencies = []

[project.urls]
HomePage = "https://github.com/altescy/colt"
Issues = "https://github.com/altescy/colt/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.3.0",
    "ruff>=0.12.11",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
exclude = [
    'examples',
]

[tool.pyright]
exclude = [
    '.venv',
    'examples',
]
